ChatInput 컴포넌트에서 불필요한 상태 제거 및 스타일 수정

--- a/src/styles/scss/abstracts/_mixins.scss
+++ b/src/styles/scss/abstracts/_mixins.scss
@@ -107,14 +107,16 @@
     transition: $transition-base;
 
     &:hover:not(:disabled) {
-
         // For CSS variables, we can't use darken(), so use filter instead
         @if str-index(inspect($bg-color), 'var(') {
             filter: brightness(0.9);
-        }
-
-        @else {
+        } @else {
             background-color: darken($bg-color, 5%);
+        }
+        
+        @if str-index(inspect($border), 'var(') {
+            // Don't modify CSS variable borders in hover
+        } @else {
             border-color: darken($border, 5%);
         }
 
