--- a/src/styles/scss/pages/_chat-input.scss
+++ b/src/styles/scss/pages/_chat-input.scss
@@ -80,12 +80,14 @@
     option {
         background-color: var(--bg-primary);
         color: var(--text-primary);
-        
+
         @include media-breakpoint-down(sm) {
             padding: spacing(1);
         }
     }
-}// Model input for manual entry
+}
+
+// Model input for manual entry
 .model-input {
     @include form-control-style;
     flex: 1;
@@ -208,7 +210,7 @@
     align-items: center;
     gap: spacing(2);
     flex: 0 0 auto;
-    
+
     @include media-breakpoint-down(sm) {
         order: 3;
         width: 100%;
@@ -236,7 +238,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        
+
         &:hover {
             background-color: var(--bg-secondary);
             color: var(--btn-primary-bg);
