--- a/src/styles/scss/main.scss
+++ b/src/styles/scss/main.scss
@@ -4,6 +4,8 @@
 
 // 1. Bootstrap CSS - External dependency
 @import "../css/bootstrap/bootstrap.min.css";
+// 1-1. Highlight.js default style for code blocks
+@import "highlight.js/styles/github.css";
 
 // 2. Abstracts - Variables, functions, mixins (no output)
 @import "abstracts/variables";
