--- a/src/styles/scss/layout/_layout.scss
+++ b/src/styles/scss/layout/_layout.scss
@@ -125,8 +125,8 @@
     flex: 1;
     @include flex-column;
     overflow: hidden;
-    // 입력창을 위한 하단 여백
-    padding-bottom: $chat-input-height;
+    // 입력창을 위한 하단 여백 (가변 입력창 높이와 동기화)
+    padding-bottom: var(--chat-input-h, #{$chat-input-height});
 }
 
 // Message list container
